create predict funtion in app

--- a/templates/index.html
+++ b/templates/index.html
@@ -28,50 +28,42 @@
 				<img src="/static/img-01.png" alt="IMG">
 			</div>
 
-			<form class="contact1-form validate-form">
+			<form class="contact1-form validate-form" action="/predict" method="post">
 				<span class="contact1-form-title">
 					Get in touch
 				</span>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input" data-validate = "age is required">
+					<input class="input1" type="number" name="age" placeholder="age">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input" data-validate = "sex is required">
+					<input class="input1" type="text" name="sex" placeholder="sex">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input" data-validate = "bmi is required">
+					<input class="input1" type="number" name="bmi" placeholder="bmi">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input" data-validate = "children is required">
+					<input class="input1" type="number" name="children" placeholder="children">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Name is required">
-					<input class="input1" type="text" name="name" placeholder="Name">
+				<div class="wrap-input1 validate-input" data-validate = "smoker is required">
+					<input class="input1" type="text" name="smoker" placeholder="smoker">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Valid email is required: ex@abc.xyz">
-					<input class="input1" type="text" name="email" placeholder="Email">
+				<div class="wrap-input1 validate-input" data-validate = "region email is required ">
+					<input class="input1" type="text" name="region" placeholder="region">
 					<span class="shadow-input1"></span>
 				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Subject is required">
-					<input class="input1" type="text" name="subject" placeholder="Subject">
-					<span class="shadow-input1"></span>
-				</div>
 
-				<div class="wrap-input1 validate-input" data-validate = "Message is required">
-					<textarea class="input1" name="message" placeholder="Message"></textarea>
-					<span class="shadow-input1"></span>
-				</div>
 
 				<div class="container-contact1-form-btn">
 					<button class="contact1-form-btn">
